--- a/css/styles.css
+++ b/css/styles.css
@@ -264,7 +264,34 @@ header {
 
 @media (min-width : 1024px) {
 
-  /* --- Portfolio Layout---*/
+  /* --- Header Layout --- */
+
+  header {
+    position: relative;
+    height: 80px;
+  }
+
+  .page-title {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    margin: 0px;
+  }
+
+  .main-nav {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    margin: 0px ;
+  }
+
+  .clearfix2 {
+    content : "";
+    display : table;
+    clear: both;
+  }
+
+  /* --- Portfolio Layout --- */
 
   .portfolio-card {
     float: left;
