--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 
-/* --- Overall Styles ---*/
+/* --- Base Styles --- */
 
 @font-face {
   font-family: "Arimo";
@@ -18,6 +18,12 @@ body {
   sans-serif;
 }
 
+.wrapper {
+  width: 90%;
+  margin: auto;
+  text-align: center;
+}
+
 p,
 figcaption h2,
 footer p {
@@ -30,6 +36,20 @@ h3 {
   color: #222;
   text-transform: uppercase;
 }
+
+img {
+  display: block;
+  width: 100%;
+}
+
+.clearfix1 {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+/* --- Header Styles --- */
 
 .page-title {
   letter-spacing: 0.01em;
@@ -44,28 +64,6 @@ h3 {
 .main-nav li a:visited {
   color: #222;
 }
-
-img {
-  display: block;
-  width: 100%;
-}
-
-#intro-image {
-  width: 70%;
-  margin: auto;
-}
-
-.midsection {
-  background-color: #fff;
-}
-
-.clearfix1 {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* --- Header ---*/
 
 header {
   text-align: center;
@@ -97,23 +95,24 @@ header {
   font-weight: bold;
 }
 
-/* --- Main Layout ---*/
 
-/* --- General Wrapper--*/
+/* --- Intro Styles --- */
 
-.wrapper {
-  width: 90%;
+#intro-image {
+  width: 70%;
   margin: auto;
-  text-align: center;
 }
 
-/* --- Intro Layout ---*/
+.midsection {
+  background-color: #fff;
+}
 
 .intro-content {
   padding-bottom: 20px;
 }
 
-/* --- Main Layout ---*/
+
+/* --- Main Styles --- */
 
 .main-content {
   padding: 30px 0px 20px;
@@ -131,7 +130,8 @@ header {
   margin-bottom: 40px;
 }
 
-/* --- Footer Layout ---*/
+
+/* --- Footer Styles --- */
 
 .main-footer {
   text-align: center;
@@ -170,9 +170,10 @@ header {
   display: none;
 }
 
+
 @media (min-width : 768px) {
 
-  /* --- General Styles---*/
+  /* --- General Styles --- */
 
   .clearfix {
     content : "";
@@ -184,7 +185,8 @@ header {
     line-height: 1.4em;
   }
 
-  /* --- Header Layout---*/
+
+  /* --- Header Styles --- */
 
   .main-nav {
     width: 300px;
@@ -198,7 +200,8 @@ header {
     background-color: #f5f5f5;
   }
 
-  /* --- Intro Layout---*/
+
+  /* --- Intro Styles --- */
 
   #intro-image {
     float: right;
@@ -215,66 +218,68 @@ header {
     text-align: left;
   }
 
-    /* --- Portfolio Layout---*/
 
-    .portfolio-card {
-      float: left;
-      width:  50%;
-      padding-left: 20px;
-      padding-right: 20px;
-    }
+  /* --- Portfolio Styles --- */
 
-    .portfolio-card img {
-      margin-bottom: 30px;
-    }
+  .portfolio-card {
+    float: left;
+    width:  50%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 
-    .portfolio-card figcaption {
-      width: 80%;
-      margin: auto;
-    }
+  .portfolio-card img {
+    margin-bottom: 30px;
+  }
 
-    /* --- Footer Layout---*/
+  .portfolio-card figcaption {
+    width: 80%;
+    margin: auto;
+  }
 
-    .footer-wrapper {
-      width: 80%;
-      margin: auto;
-    }
 
-    .bottom-wrapper {
-      width: 90%;
-      margin: auto;
-    }
+  /* --- Footer Styles --- */
 
-    .footer-name {
-      margin-left: 30px;
-    }
+  .footer-wrapper {
+    width: 80%;
+    margin: auto;
+  }
 
-    .hidden-second {
-      display: none;
-    }
+  .bottom-wrapper {
+    width: 90%;
+    margin: auto;
+  }
 
-    .hidden-first {
-      display: block;
-      float: right;
-      margin-top: 24px;
-      margin-right: 30px;
-      margin-bottom: 32px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #222;
-      
-    }
+  .footer-name {
+    margin-left: 30px;
+  }
+
+  .hidden-second {
+    display: none;
+  }
+
+  .hidden-first {
+    display: block;
+    float: right;
+    margin-top: 24px;
+    margin-right: 30px;
+    margin-bottom: 32px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #222;
     
-    .back-to-top:visited {
-      font-weight: bold;
-      color: #222;
-    }
+  }
+  
+  .back-to-top:visited {
+    font-weight: bold;
+    color: #222;
+  }
 
 }
 
 @media (min-width : 1024px) {
 
-  /* --- Header Layout --- */
+  /* --- Header Styles --- */
 
   header {
     position: relative;
@@ -301,7 +306,7 @@ header {
     clear: both;
   }
 
-  /* --- Portfolio Layout --- */
+  /* --- Portfolio Styles --- */
 
   .portfolio-card {
     float: left;
